--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
-.gradle
-/build/
+# Ignore Gradle project-specific cache directory
+*.gradle
+*.classpath
+*.gitignore.swp
+*.project
+*.settings/
+*.gitattributes
+gradlew
 
-# Ignore Gradle GUI config
-gradle-app.setting
+bin/
+gradle/
 
-# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
-!gradle-wrapper.jar
-
-# Cache of project
-.gradletasknamecache
-
-# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
-# gradle/wrapper/gradle-wrapper.properties
+# Ignore Gradle build output directory
+build
